--- a/index.html
+++ b/index.html
@@ -2,18 +2,293 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Acrostia</title>
     <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
+
 </head>
 <body id="site">
+
 <header>
 
+    <h1>Acrostia</h1>
+
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
+        <a href="#work">Work</a>
+        <a href="#contacts">Contacts</a>
+    </nav>
+
 </header>
+
 <main id="site-content">
 
+    <section id="home">
+        <div id="hero-text-wrapper">
+
+        </div>
+    </section>
+
+    <section id="services">
+
+        <h2>OUR SERVICES</h2>
+
+        <p>
+            Cras commodo mattis justo nec lobortis. Nam ut tellus lobortis, ullamcorper massa sit amet
+        </p>
+
+        <p>
+            Cras suscipit porttitor porttitor. Morbi sit amet tincidunt sapien. Curabitur posuere lectus aliquet erat
+            rutrum sollicitudin. In enim diam, ullamcorper quis libero et, ultricies commodo est. Quisque at ante vitae
+            justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.
+        </p>
+
+        <div>
+            <h3>RESEARCHING</h3>
+            <P>
+                Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore.
+            </P>
+        </div>
+        <div>
+            <h3>DESIGN</h3>
+            <p>
+                Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore.
+            </p>
+        </div>
+        <div>
+            <h3>DEVELOPMENT</h3>
+            <p>
+                Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore.
+            </p>
+        </div>
+        <div>
+            <h3>LAUNCH</h3>
+            <p>
+                Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore.
+            </p>
+        </div>
+
+    </section>
+
+    <section id="about">
+
+        <h2>Who we are & what we do</h2>
+
+        <p>
+            Cras suscipit porttitor porttitor. Morbi sit amet tincidunt sapien. Curabitur posuere lectus aliquet erat
+            rutrum sollicitudin. In enim diam, ullamcorper quis libero et, ultricies commodo est. Quisque at ante vitae
+            justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.
+        </p>
+
+        <div id="mtt">MEET THE TEAM</div>
+
+        <div class="team-rounded-rectangle">
+            <h4></h4>
+            <p></p>
+            <ul class="team-social-list">
+                <li class="team-social-list-item">
+                    <i class="fa fa-facebook-f"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-twitter"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-google-plus"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-linkedin"></i>
+                </li>
+            </ul>
+        </div>
+        <div class="team-rounded-rectangle">
+            <h4></h4>
+            <p></p>
+            <ul class="team-social-list">
+                <li class="team-social-list-item">
+                    <i class="fa fa-facebook-f"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-twitter"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-google-plus"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-linkedin"></i>
+                </li>
+            </ul>
+        </div>
+        <div class="team-rounded-rectangle">
+            <h4></h4>
+            <p></p>
+            <ul class="team-social-list">
+                <li class="team-social-list-item">
+                    <i class="fa fa-facebook-f"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-twitter"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-google-plus"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-linkedin"></i>
+                </li>
+            </ul>
+        </div>
+        <div class="team-rounded-rectangle">
+            <h4></h4>
+            <p></p>
+            <ul class="team-social-list">
+                <li class="team-social-list-item">
+                    <i class="fa fa-facebook-f"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-twitter"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-google-plus"></i>
+                </li>
+                <li class="team-social-list-item">
+                    <i class="fa fa-linkedin"></i>
+                </li>
+            </ul>
+        </div>
+
+    </section>
+
+    <section id="work">
+
+        <h2>OUR WORK</h2>
+
+        <p>
+            Cras suscipit porttitor porttitor. Morbi sit amet tincidunt sapien. Curabitur posuere lectus aliquet erat
+            rutrum sollicitudin. In enim diam, ullamcorper quis libero et, ultricies commodo est. Quisque at ante vitae
+            justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.
+        </p>
+
+        <div>
+            <h5>PORTFOLIO</h5>
+
+            <nav id="gallery-filter-nav">
+                <a href="" class="gallery-filter-links">All</a>
+                <a href="" class="gallery-filter-links">Photography</a>
+                <a href="" class="gallery-filter-links">Logo design</a>
+                <a href="" class="gallery-filter-links">Web design</a>
+            </nav>
+        </div>
+
+        <div id="grid-container">
+            <div class="grid-item">
+                <img class="grid-img" src="" alt="">
+
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="" alt="">
+
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="" alt="">
+
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="" alt="">
+
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="" alt="">
+
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="" alt="">
+
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="" alt="">
+
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="" alt="">
+
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+
+        <h2>CONTACT US</h2>
+
+        <p>
+            Cras suscipit porttitor porttitor. Morbi sit amet tincidunt sapien. Curabitur posuere lectus aliquet erat
+            rutrum sollicitudin. In enim diam, ullamcorper quis libero et, ultricies commodo est. Quisque at ante vitae
+            justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.
+        </p>
+
+        <div id="contacts-and-map-wrapper">
+            <h6>Address</h6>
+
+            <p id="brand-text">
+                Acrostia
+            </p>
+
+            <p id="address">
+                Sevenoaks Rd <br>
+                Sevenoaks TN14 7HR, UK
+            </p>
+
+            <p id="contacts">
+                Phone: +44 555 555 555 <br>
+                Fax: +44 556 555 555 <br>
+                E-mail: info@acrostia.com <br>
+                Skype: Ac0stia
+            </p>
+
+            <div id="map"></div>
+
+        </div>
+
+        <div id="form-wrapper">
+
+            <h6>Ask a question</h6>
+
+            <form action="">
+                <span id="inputs-wrapper">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                </span>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your question"></textarea>
+                <button>SEND</button>
+            </form>
+        </div>
+
+    </section>
+
 </main>
+
 <footer>
 
+    <ul id="footer-social-list">
+        <li class="footer-social-list-item">
+            <i class="fa fa-facebook-f"></i>
+        </li>
+        <li class="footer-social-list-item">
+            <i class="fa fa-twitter"></i>
+        </li>
+        <li class="footer-social-list-item">
+            <i class="fa fa-google-plus"></i>
+        </li>
+        <li class="footer-social-list-item">
+            <i class="fa fa-linkedin"></i>
+        </li>
+    </ul>
+
 </footer>
+
 </body>
 </html>
