Added centering mixin, colors variables, awesome-slider.html and hero section text.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Acrostia</title>
-    <link rel="import" href="./bower_components/awesome-slider/awesome-slider.html" />
+    <link rel="import" href="awesome-slider.html"/>
     <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Damion|Lato:300,400,700,900" rel="stylesheet">
@@ -20,7 +20,7 @@
     <h1>acrostia</h1>
 
     <nav id="header-nav">
-        <a class="header-nav-link" href="#home">Home</a>
+        <a class="header-nav-link" href="#hero">Home</a>
         <a class="header-nav-link" href="#services">Services</a>
         <a class="header-nav-link" href="#about">About</a>
         <a class="header-nav-link" href="#work">Work</a>
@@ -31,19 +31,18 @@
 
 <main id="site-content">
 
-    <section id="home">
+    <section id="hero">
+        <div id="hero-text-wrapper">
+            <div id="GIC">GOOD IDEAS<br> comes</div>
+            <div id="first">FIRST!</div>
+        </div>
+
         <awesome-slider autostart="true" bullets="true">
-                <item source="./img/hero.png"></item>
-                <item source="./img/hero2.jpg"></item>
-                <item source="./img/hero3.jpg"></item>
+            <item source="./img/hero.png"></item>
+            <item source="./img/hero2.jpg"></item>
+            <item source="./img/hero3.jpg"></item>
         </awesome-slider>
 
-        <div class="container">
-
-            <div id="hero-text-wrapper">
-
-            </div>
-        </div>
     </section>
 
     <section id="services">
