--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <script src="./node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="./node_modules/jquery-nav-scroll/jquery.navScroll.min.js"></script>
 </head>
 <body id="site">
 
@@ -20,11 +22,11 @@
     <h1>acrostia</h1>
 
     <nav id="header-nav">
-        <a class="header-nav-link" href="#hero">Home</a>
-        <a class="header-nav-link" href="#services">Services</a>
-        <a class="header-nav-link" href="#about">About</a>
-        <a class="header-nav-link" href="#work">Work</a>
-        <a class="header-nav-link" href="#contacts">Contacts</a>
+        <a class="header-nav-link hero" href="#hero">Home</a>
+        <a class="header-nav-link services" href="#services">Services</a>
+        <a class="header-nav-link about" href="#about">About</a>
+        <a class="header-nav-link work" href="#work">Work</a>
+        <a class="header-nav-link contacts" href="#contacts">Contacts</a>
     </nav>
 
 </header>
@@ -324,5 +326,7 @@
     </ul>
 
 </footer>
+
+<script src="./js/nav-scroll.js"></script>
 </body>
 </html>
