Added display: block to after-before mixin, added justif-content variable to flex container mixin, added circle mixin. Finished services section.

--- a/index.html
+++ b/index.html
@@ -65,39 +65,83 @@
                 justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.
             </p>
 
-            <div>
-                <h3 class="uppercase">RESEARCHING</h3>
-                <P>
-                    Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate
-                    velit
-                    esse cillum dolore.
-                </P>
-            </div>
-            <div>
-                <h3 class="uppercase">DESIGN</h3>
-                <p>
-                    Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate
-                    velit
-                    esse cillum dolore.
-                </p>
-            </div>
-            <div>
-                <h3 class="uppercase">DEVELOPMENT</h3>
-                <p>
-                    Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate
-                    velit
-                    esse cillum dolore.
-                </p>
-            </div>
-            <div>
-                <h3 class="uppercase">LAUNCH</h3>
-                <p>
-                    Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate
-                    velit
-                    esse cillum dolore.
-                </p>
-            </div>
-        </div>
+            <div id="services-wrapper">
+
+                <div class="service">
+
+                    <div class="transparent-circle-with-border">
+                        <div class="white-circle">
+                            <img src="./img/lightball.png" alt="Lightball">
+                        </div>
+                    </div>
+
+                    <h3 class="uppercase">RESEARCHING</h3>
+
+                    <p class="service-description">
+                        Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate
+                        velit
+                        esse cillum dolore.
+                    </p>
+
+                </div>
+
+                <div class="service">
+
+                    <div class="transparent-circle-with-border">
+                        <div class="white-circle">
+                            <img src="./img/m-wand.png" alt="Magic wand">
+                        </div>
+                    </div>
+
+                    <h3 class="uppercase">DESIGN</h3>
+
+                    <p class="service-description">
+                        Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate
+                        velit
+                        esse cillum dolore.
+                    </p>
+
+                </div>
+
+                <div class="service">
+
+                    <div class="transparent-circle-with-border">
+                        <div class="white-circle">
+                            <img src="./img/gears.png" alt="Gears">
+                        </div>
+                    </div>
+
+                    <h3 class="uppercase">DEVELOPMENT</h3>
+
+                    <p class="service-description">
+                        Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate
+                        velit
+                        esse cillum dolore.
+                    </p>
+
+                </div>
+
+                <div class="service">
+
+                    <div class="transparent-circle-with-border">
+                        <div class="white-circle">
+                            <img src="./img/rocket.png" alt="Rocket">
+                        </div>
+                    </div>
+
+                    <h3 class="uppercase">LAUNCH</h3>
+
+                    <p class="service-description">
+                        Praesent interdum blandit quam. Asunt in anim uis aute irure dolor in reprehenderit in voluptate
+                        velit
+                        esse cillum dolore.
+                    </p>
+
+                </div>
+
+            </div> <!-- Service wrapper -->
+
+        </div> <!-- Container -->
 
     </section>
 
@@ -117,7 +161,7 @@
             <div id="mtt" class="uppercase">MEET THE TEAM</div>
 
             <div class="team-rounded-rectangle">
-                <h4></h4>
+                <h4 class="uppercase"></h4>
                 <p></p>
                 <ul class="team-social-list">
                     <li class="team-social-list-item">
@@ -135,7 +179,7 @@
                 </ul>
             </div>
             <div class="team-rounded-rectangle">
-                <h4></h4>
+                <h4 class="uppercase"></h4>
                 <p></p>
                 <ul class="team-social-list">
                     <li class="team-social-list-item">
@@ -153,7 +197,7 @@
                 </ul>
             </div>
             <div class="team-rounded-rectangle">
-                <h4></h4>
+                <h4 class="uppercase"></h4>
                 <p></p>
                 <ul class="team-social-list">
                     <li class="team-social-list-item">
@@ -171,7 +215,7 @@
                 </ul>
             </div>
             <div class="team-rounded-rectangle">
-                <h4></h4>
+                <h4 class="uppercase"></h4>
                 <p></p>
                 <ul class="team-social-list">
                     <li class="team-social-list-item">
