Added 0 padding to all elements. Finished about section.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 </div>
 
-            </div> <!-- Service wrapper -->
+            </div> <!-- Services wrapper -->
 
         </div> <!-- Container -->
 
@@ -148,6 +148,7 @@
     <section id="about">
 
         <div class="container">
+
             <h2 class="uppercase">Who we are & what we do</h2>
 
             <p class="section-description">
@@ -158,81 +159,158 @@
                 justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.
             </p>
 
-            <div id="mtt" class="uppercase">MEET THE TEAM</div>
+            <div id="MTT" class="uppercase">
+                MEET THE TEAM
+            </div>
 
-            <div class="team-rounded-rectangle">
-                <h4 class="uppercase"></h4>
-                <p></p>
-                <ul class="team-social-list">
-                    <li class="team-social-list-item">
-                        <i class="fa fa-facebook-f"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-twitter"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-google-plus"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-linkedin"></i>
-                    </li>
-                </ul>
-            </div>
-            <div class="team-rounded-rectangle">
-                <h4 class="uppercase"></h4>
-                <p></p>
-                <ul class="team-social-list">
-                    <li class="team-social-list-item">
-                        <i class="fa fa-facebook-f"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-twitter"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-google-plus"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-linkedin"></i>
-                    </li>
-                </ul>
-            </div>
-            <div class="team-rounded-rectangle">
-                <h4 class="uppercase"></h4>
-                <p></p>
-                <ul class="team-social-list">
-                    <li class="team-social-list-item">
-                        <i class="fa fa-facebook-f"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-twitter"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-google-plus"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-linkedin"></i>
-                    </li>
-                </ul>
-            </div>
-            <div class="team-rounded-rectangle">
-                <h4 class="uppercase"></h4>
-                <p></p>
-                <ul class="team-social-list">
-                    <li class="team-social-list-item">
-                        <i class="fa fa-facebook-f"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-twitter"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-google-plus"></i>
-                    </li>
-                    <li class="team-social-list-item">
-                        <i class="fa fa-linkedin"></i>
-                    </li>
-                </ul>
-            </div>
-        </div>
+            <div id="team-wrapper">
+                <div class="team-member-card">
+
+                        <div class="team-member-circle">
+                            <img src="./img/team-member.png" alt="Team member photo">
+                            <img class="hover-img" src="./img/member-red.png" alt="Team member photo">
+                        </div>
+
+                    <h4 class="uppercase">Anton Petrov</h4>
+
+                    <p class="position">General manager </p>
+
+                    <ul class="team-social-list">
+                        <li>
+                            <div class="team-social-list-item fb">
+                                <a href=""><i class="fa fa-facebook-f"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item twitter">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item google">
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item linkedin">
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+
+                <div class="team-member-card">
+
+                        <div class="team-member-circle">
+                            <img src="./img/team-member.png" alt="Team member photo">
+                            <img class="hover-img" src="./img/member-red.png" alt="Team member photo">
+                        </div>
+
+                    <h4 class="uppercase">Kirl DONCHEV</h4>
+
+                    <p class="position">Design Master</p>
+
+                    <ul class="team-social-list">
+                        <li>
+                            <div class="team-social-list-item fb">
+                                <a href=""><i class="fa fa-facebook-f"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item twitter">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item google">
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item linkedin">
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+
+                <div class="team-member-card">
+
+                        <div class="team-member-circle">
+                            <img src="./img/team-member.png" alt="Team member photo">
+                            <img class="hover-img" src="./img/member-red.png" alt="Team member photo">
+                        </div>
+
+                    <h4 class="uppercase">Ilian Bonev</h4>
+
+                    <p class="position">Developer Ninja</p>
+
+                    <ul class="team-social-list">
+                        <li>
+                            <div class="team-social-list-item fb">
+                                <a href=""><i class="fa fa-facebook-f"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item twitter">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item google">
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item linkedin">
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+
+                <div class="team-member-card">
+
+                        <div class="team-member-circle">
+                            <img src="./img/team-member.png" alt="Team member photo">
+                            <img class="hover-img" src="./img/member-red.png" alt="Team member photo">
+                        </div>
+
+                    <h4 class="uppercase">Doni Stamov</h4>
+
+                    <p class="position">SEO guru</p>
+
+                    <ul class="team-social-list">
+                        <li>
+                            <div class="team-social-list-item fb">
+                                <a href=""><i class="fa fa-facebook-f"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item twitter">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item google">
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="team-social-list-item linkedin">
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+
+            </div> <!-- Team wrapper -->
+
+        </div> <!-- Container -->
 
     </section>
 
