Added 0 padding to all elements. Finished about section.

--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
                 justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.
             </p>
 
-            <div>
+            <div id="portfolio-filter-wrapper">
+
                 <h5 class="uppercase">PORTFOLIO</h5>
 
                 <nav id="gallery-filter-nav">
@@ -336,43 +337,46 @@
                     <a href="" class="gallery-filter-links">Logo design</a>
                     <a href="" class="gallery-filter-links">Web design</a>
                 </nav>
+
             </div>
 
             <div id="grid-container">
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-
                 </div>
+
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-
                 </div>
+
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-
                 </div>
+
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-
                 </div>
+
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-
                 </div>
+
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-
                 </div>
+
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-
                 </div>
+
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-
                 </div>
-            </div>
-        </div>
+
+            </div> <!-- Grid-container -->
+
+        </div> <!-- Container -->
+
     </section>
 
     <section id="contact">
