Revert "Added 0 padding to all elements. Finished about section."
This reverts commit 16ac767b83e84fff02be64fb22d35e1e272833f9.

--- a/index.html
+++ b/index.html
@@ -327,8 +327,7 @@
                 justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.
             </p>
 
-            <div id="portfolio-filter-wrapper">
-
+            <div>
                 <h5 class="uppercase">PORTFOLIO</h5>
 
                 <nav id="gallery-filter-nav">
@@ -337,46 +336,43 @@
                     <a href="" class="gallery-filter-links">Logo design</a>
                     <a href="" class="gallery-filter-links">Web design</a>
                 </nav>
-
             </div>
 
             <div id="grid-container">
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-                </div>
 
+                </div>
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-                </div>
 
+                </div>
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-                </div>
 
+                </div>
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-                </div>
 
+                </div>
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-                </div>
 
+                </div>
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-                </div>
 
+                </div>
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
-                </div>
 
+                </div>
                 <div class="grid-item">
                     <img class="grid-img" src="" alt="">
+
                 </div>
-
-            </div> <!-- Grid-container -->
-
-        </div> <!-- Container -->
-
+            </div>
+        </div>
     </section>
 
     <section id="contact">
