Created contacts form.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="header-nav-link services" href="#services" onclick="goToByScroll('services')">Services</a>
         <a class="header-nav-link about" href="#about" onclick="goToByScroll('about')">About</a>
         <a class="header-nav-link work" href="#work" onclick="goToByScroll('work')">Work</a>
-        <a class="header-nav-link contacts" href="#contacts" onclick="goToByScroll('contacts')">Contacts</a>
+        <a class="header-nav-link contacts" href="#contacts" onclick="goToByScroll('contact-us')">Contacts</a>
     </nav>
 
 </header>
@@ -375,7 +375,7 @@
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contact-us">
 
         <div class="container">
             <h2 class="uppercase">CONTACT US</h2>
@@ -388,41 +388,43 @@
                 justo fermentum viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.
             </p>
 
-            <div id="contacts-and-map-wrapper">
-                <h6>Address</h6>
+            <div id="contacts-map-form-wrapper">
+                <div id="contacts-and-map-wrapper">
+                    <h6>Address</h6>
 
-                <p id="brand-text">
-                    Acrostia
-                </p>
+                    <p id="brand-text">
+                        Acrostia
+                    </p>
 
-                <p id="address">
-                    Sevenoaks Rd <br>
-                    Sevenoaks TN14 7HR, UK
-                </p>
+                    <p id="address">
+                        Sevenoaks Rd <br>
+                        Sevenoaks TN14 7HR, UK
+                    </p>
 
-                <p id="contacts">
-                    Phone: +44 555 555 555 <br>
-                    Fax: +44 556 555 555 <br>
-                    E-mail: info@acrostia.com <br>
-                    Skype: Ac0stia
-                </p>
+                    <p id="contacts">
+                        Phone: +44 555 555 555 <br>
+                        Fax: +44 556 555 555 <br>
+                        E-mail: info@acrostia.com <br>
+                        Skype: Ac0stia
+                    </p>
 
-                <div id="map"></div>
+                    <div id="map"></div>
 
-            </div>
+                </div>
 
-            <div id="form-wrapper">
+                <div id="form-wrapper">
 
-                <h6>Ask a question</h6>
+                    <h6>Ask a question</h6>
 
-                <form action="">
+                    <form action="">
                 <span id="inputs-wrapper">
                     <input type="text" placeholder="Name">
                     <input type="email" placeholder="Email">
                 </span>
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Your question"></textarea>
-                    <button class="uppercase">SEND</button>
-                </form>
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Your question"></textarea>
+                        <button class="uppercase">SEND</button>
+                    </form>
+                </div>
             </div>
         </div>
 
